# homepage-rs

./: .gitignore  Cargo.toml  LICENSE  Rocket.toml
resources/public/css/: styles.css
resources/templates/: base.html.hbs  home.html.hbs
resources/templates/blog/: entry.html.hbs  index.html.hbs
src/: blog.rs  main.rs  resources.rs
